# Spartan-Touchdown

./: CMakeLists.txt  ProjectApp.cpp  ProjectApp.h  README.md  main.cpp  pch.h
ProjectLib/: Background.cpp  Background.h  BrickWall.cpp  BrickWall.h  CMakeLists.txt  CautionWall.cpp  CautionWall.h  Coin.cpp  Coin.h  DoubleJumpPowerup.cpp  DoubleJumpPowerup.h  Enemy.cpp  Enemy.h  Football.cpp  Football.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GoalPost.cpp  GoalPost.h  GoldCoin.cpp  GoldCoin.h  InvulnerabilityPowerup.cpp  InvulnerabilityPowerup.h  Item.cpp  Item.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  MovingItem.cpp  MovingItem.h  NDEnemy.cpp  NDEnemy.h  Platform.cpp  Platform.h  PowerUp.cpp  PowerUp.h  ScoreBoard.cpp  (+17 more)
Tests/: BackgroundTest.cpp  CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  TeamFeatureTest.cpp  TestFootball.cpp  TestItem.cpp  gtest_main.cpp
levels/: level0.xml  level1.xml  level3.xml
